syntax = "proto3";

import "messages/user_predictions.proto";

package stats.service.collector;

option java_multiple_files = true;
option java_package = "ru.practicum.grpc.stats.event";

service RecommendationsController{
  rpc GetRecommendationsForUser(stats.message.event.UserPredictionsRequestProto)
      returns (stream stats.message.event.RecommendedEventProto);

  rpc GetSimilarEvents(stats.message.event.SimilarEventsRequestProto)
      returns (stream stats.message.event.RecommendedEventProto);

  rpc GetInteractionsCount(stats.message.event.InteractionsCountRequestProto)
      returns (stream stats.message.event.RecommendedEventProto);
}